# stupid-cg-engine

./: .gitignore  CMakeLists.txt  LICENSE  LightSource.cpp  LightSource.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
